[metadata]
name = progrock
version = 0.0.1
author = Brendan Berg
author_email = brendan@berg.industries
description = A rock programmer
license = MPL-2.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brendanberg/progrock
project_urls =
    Bug Tracker = https://github.com/brendanberg/progrock/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License Version 2.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
py_modules =
    progrock
python_requires = >=3.6
install_requires =
    pyserial==3.5
    pyserial-asyncio==0.5

[options.entry_points]
console_scripts =
    progrock = progrock:main
